deploy-app.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      role: backend
  minReadySeconds: 20
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        role: backend
    spec:
      containers:
      - name: backend
        image: us.gcr.io/basearchitecture/microservice-lumen-docker_lumen
        ports:
        - containerPort: 80
