service-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: lumen-app
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: lumen-app
  type: NodePort
